# square-square

./: build.gradle
c++ port/: CMakeLists.txt  assets.cpp  assets.h  engine notes.txt  globals.cpp  globals.h  main.cpp  main.h  readme.txt
c++ port/assets/shaders/: TextureFragment.glsl  TextureVertex.glsl
c++ port/entity/: engine.cpp  engine.h  family.h  system.h
c++ port/entity/components/: particle.h  texture.h  transform.h
c++ port/entity/systems/: expansionsystem.cpp  expansionsystem.h  gameoversystem.cpp  gameoversystem.h  inputsystem.cpp  inputsystem.h  rendersystem.cpp  rendersystem.h  spawnsystem.cpp  spawnsystem.h
c++ port/graphics/: gltexture.cpp  gltexture.h
c++ port/graphics/gl_structs/: color.h  rectangle.h  texcoord.h  texturedvertex.h  vertexpos.h
c++ port/graphics/programs/: shaderprogram.cpp  shaderprogram.h  textureprogram.cpp  textureprogram.h
c++ port/math/: random.h  vector2.h
c++ port/sound/: sound.cpp  sound.h
core/src/: Main.gwt.xml
core/src/com/mygdx/core/: AssetPaths.java  Constants.java  GameScreen.java  Gamedata.java  LoadScreen.java  Main.java  MenuScreen.java
core/src/com/mygdx/core/entity/: EntityFactory.java  Mappers.java
core/src/com/mygdx/core/entity/components/: ParticleComponent.java  PixelComponent.java  PlayerInputComponent.java  PositionComponent.java
core/src/com/mygdx/core/entity/systems/: ExpansionSystem.java  GameoverSystem.java  PixelRenderSystem.java  PlayerInputSystem.java  SpawnSystem.java
desktop/: build.gradle
desktop/src/com/mygdx/core/desktop/: DesktopLauncher.java
html/: build.gradle
html/src/com/mygdx/core/: GdxDefinition.gwt.xml  GdxDefinitionSuperdev.gwt.xml
html/src/com/mygdx/core/client/: HtmlLauncher.java
html/war/assets/: assets.txt  font.fnt
html/webapp/: index.html
